--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Ignore everything
-*
+#*
 
 # But not these files...
 !.gitignore
-!compiler/src
+!/compiler/src
 # etc...
 
 # ...even if they are in subdirectories
