--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ compiler/build/CMakeFiles/dhbwcc.dir/src/typecheck.c.o
 compiler/build/CMakeFiles/dhbwcc.dir/src/doMagic.c.o
 compiler/build/CMakeFiles/dhbwcc.dir/src/typecheck.c.o
 compiler/build/CMakeFiles/dhbwcc.dir/src/doMagic.c.o
+compiler/build/CMakeFiles/dhbwcc.dir/src/typecheck.c.o
